fixed nav menu item spacing

--- a/src/css/_partial/_header/_menu.scss
+++ b/src/css/_partial/_header/_menu.scss
@@ -9,8 +9,8 @@
     display: inline-block;
     position: relative;
     padding-left: 0;
-    padding-right: 25px;
-    font-family: $global-serif-font-family;
+    padding-right: 1em;
+    font-family: $global-font-family;
 
     .menu-item {
       display: inline-block;
